--- a/Celular/src/main/resources/Styles.css
+++ b/Celular/src/main/resources/Styles.css
@@ -1,21 +1,21 @@
 .button {
     -fx-font-veight: bold;
-    -fx-background-color: #f57c00;
+    -fx-background-color: #000080;
     -fx-font-size: 17;
     -fx-text-fill: white;
 }
 
 .button:hover {
     -fx-font-veight: bold;
-    -fx-background-color: white;
+    -fx-background-color: #0000FF;
     -fx-font-size: 17;
-    -fx-text-fill: #f57c00;
+    -fx-text-fill: white;
 }
 
 .button: pressed {
     -fx-font-veight: bold;
-    -fx-background-color: white;
+    -fx-background-color: #0000FF;
     -fx-font-size: 17;
-    -fx-text-fill: #f57c00;
-    -fx-border-color: #f57c00;
+    -fx-text-fill: white;
+    -fx-border-color: #0000FF;
 }
