--- a/Celular/src/main/resources/com/example/celular/layout_celular.fxml
+++ b/Celular/src/main/resources/com/example/celular/layout_celular.fxml
@@ -10,38 +10,38 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <children>
-        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #000080;">
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: WHITE;">
             <children>
-                <Label layoutX="313.0" layoutY="61.0" text="PROPIEDADES DO CELULAR" textFill="#f57c00">
+                <Label layoutX="313.0" layoutY="61.0" text="PROPRIEDADES DO CELULAR" textFill="NAVY">
                     <font>
                         <Font size="60.0" />
                     </font>
                 </Label>
-                <Label layoutX="322.0" layoutY="300.0" text="MODELO: " textFill="#f57c00">
+                <Label layoutX="322.0" layoutY="300.0" text="MODELO: " textFill="NAVY">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
                 <TextField fx:id="campoModelo" layoutX="436.0" layoutY="304.0" prefHeight="25.0" prefWidth="200.0" stylesheets="@../../../Styles2.css" />
-                <Label layoutX="359.0" layoutY="401.0" text="TELA: " textFill="#f57c00">
+                <Label layoutX="359.0" layoutY="401.0" text="TELA: " textFill="NAVY">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
                 <TextField fx:id="campoTela" layoutX="436.0" layoutY="404.0" prefHeight="25.0" prefWidth="200.0" stylesheets="@../../../Styles2.css" />
-                <Label layoutX="825.0" layoutY="401.0" text="GIGABYTE:" textFill="#f57c00">
+                <Label layoutX="825.0" layoutY="401.0" text="GIGABYTE:" textFill="NAVY">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
                 <TextField fx:id="campoGigabyte" layoutX="945.0" layoutY="404.0" prefHeight="25.0" prefWidth="95.0" stylesheets="@../../../Styles2.css" />
                 <TextField fx:id="campoCor" layoutX="436.0" layoutY="504.0" prefHeight="25.0" prefWidth="200.0" stylesheets="@../../../Styles2.css" />
-                <Label layoutX="364.0" layoutY="501.0" text="COR:" textFill="#f57c00">
+                <Label layoutX="364.0" layoutY="501.0" text="COR:" textFill="NAVY">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
-                <Label layoutX="816.0" layoutY="300.0" text="TAMANHO: " textFill="#f57c00">
+                <Label layoutX="816.0" layoutY="300.0" text="TAMANHO: " textFill="NAVY">
                     <font>
                         <Font size="22.0" />
                     </font>
