--- a/Celular/src/main/resources/com/example/celular/layout_celular.fxml
+++ b/Celular/src/main/resources/com/example/celular/layout_celular.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="640.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.celular.CelularController">
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="640.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.celular.CelularController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -48,7 +51,6 @@
                 </Label>
                 <TextField fx:id="campoTamanho" layoutX="945.0" layoutY="304.0" prefHeight="25.0" prefWidth="95.0" stylesheets="@../../../Styles2.css" />
                 <Button fx:id="botaoSalvar" layoutX="1040.0" layoutY="603.0" mnemonicParsing="false" onAction="#salvarDados" prefHeight="30.0" prefWidth="110.0" stylesheets="@../../../Styles.css" text="SALVAR" />
-                <Button fx:id="botaoVisualizar" layoutX="1171.0" layoutY="603.0" mnemonicParsing="false" onAction="#visualizarDados" prefHeight="30.0" prefWidth="115.0" stylesheets="@../../../Styles.css" text="VISUALIZAR" />
                 <Label layoutX="835.0" layoutY="501.0" text="CELULAR:" textFill="#f57c00" visible="false">
                     <font>
                         <Font size="22.0" />
